<resources>
    <string name="app_name">TimeSpotter</string>
    <string name="welcome_message">Hello there, Welcome back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="forget_password">Forget password?</string>
    <string name="welcome">Welcome</string>
    <string name="create_account_msg">Create your account today</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="sign_up_btn_msg">Sign up</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="discover">Discover</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="table">Table</string>
    <string name="profile_full_name">Dummy text</string>
    <string name="profile_username">Dummy username</string>
    <string name="profile_star_picture">profile_star_picture</string>
    <string name="profile_pts">123</string>
    <string name="profile_pts_count">Points</string>
    <string name="profile_add_marker_pictur">profile_add_marker_pictur</string>
    <string name="submissions_count">123</string>
    <string name="submissions_text">Submissions</string>
    <string name="profile_username_hint">Username</string>
    <string name="profile_email_hint">Email</string>
    <string name="profile_phone_hint">Phone</string>
    <string name="profile_password_hint">Password</string>
    <string name="profile_update_button_text">Update</string>
    <string name="profile_logout_button_text">Logout</string>

    <string-array name="place_types">
        <item>Library</item>
        <item>Caffe</item>
        <item>Florist</item>
        <item>Hospital</item>
        <item>Pizzeria</item>
    </string-array>

    <string-array name="filter_place_types">
        <item>None</item>
        <item>Library</item>
        <item>Caffe</item>
        <item>Florist</item>
        <item>Hospital</item>
        <item>Pizzeria</item>
    </string-array>

    <array name="place_marker_icons">
        <item>@drawable/library_marker</item>
        <item>@drawable/cafe_marker</item>
        <item>@drawable/florist_marker</item>
        <item>@drawable/hospital_marker</item>
        <item>@drawable/pizzeria_marker</item>
    </array>

    <array name="avatar_images">
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
        <item>@drawable/profile_dummy_image</item>
    </array>
</resources>